# local-shell-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  DEVELOPMENT.md  Dockerfile  ENV.md  INSTALL.md  LICENSE  OAUTH_SETUP.md  README.md  SECURITY.md  SUPPORT.md  TOOLS.md  USAGE.md  config.example.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-agent.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/upstream-sync/b30781c/: 03-routed-audit.md  06-http-mcp-parity.md  09-docs-site-i18n.md  10-agent-bridge.md  15-worker-dependency-bootstrap.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: CNAME  development.md  index.ar.md  index.de.md  index.es.md  index.fr.md  index.hi.md  index.id.md  index.it.md  index.ja.md  index.ko.md  index.md  index.pl.md  index.pt-BR.md  index.ru.md  index.tr.md  index.vi.md  index.zh-Hant.md  index.zh.md  security.ar.md  security.de.md  security.es.md  security.fr.md  security.hi.md  security.id.md  security.it.md  security.ja.md  security.ko.md  security.md  security.pl.md  security.pt-BR.md  security.ru.md  security.tr.md  security.vi.md  security.zh-Hant.md  security.zh.md  troubleshooting.ar.md  troubleshooting.de.md  troubleshooting.es.md  troubleshooting.fr.md  (+13 more)
docs/assets/: reference-renderer.js
docs/assets/stylesheets/: extra.css
docs/community/: contributing.md  security-policy.md
docs/getting-started/: chatgpt-connector.ar.md  chatgpt-connector.de.md  chatgpt-connector.es.md  chatgpt-connector.fr.md  chatgpt-connector.hi.md  chatgpt-connector.id.md  chatgpt-connector.it.md  chatgpt-connector.ja.md  chatgpt-connector.ko.md  chatgpt-connector.md  chatgpt-connector.pl.md  chatgpt-connector.pt-BR.md  chatgpt-connector.ru.md  chatgpt-connector.tr.md  chatgpt-connector.vi.md  chatgpt-connector.zh-Hant.md  chatgpt-connector.zh.md  cloudflare-tunnel.md  docker-compose.md  install-options.md  quickstart.ar.md  quickstart.de.md  quickstart.es.md  quickstart.fr.md  quickstart.hi.md  quickstart.id.md  quickstart.it.md  quickstart.ja.md  quickstart.ko.md  quickstart.md  quickstart.pl.md  quickstart.pt-BR.md  quickstart.ru.md  quickstart.tr.md  quickstart.vi.md  quickstart.zh-Hant.md  quickstart.zh.md  vscode.md
docs/guides/: agent-bridge.md  audit-log.md  common-workflows.md  example-prompts.md  git-access.md  remote-workers.ar.md  remote-workers.de.md  remote-workers.es.md  remote-workers.fr.md  remote-workers.hi.md  remote-workers.id.md  remote-workers.it.md  remote-workers.ja.md  remote-workers.ko.md  remote-workers.md  remote-workers.pl.md  remote-workers.pt-BR.md  remote-workers.ru.md  remote-workers.tr.md  remote-workers.vi.md  remote-workers.zh-Hant.md  remote-workers.zh.md
docs/maintenance/: agent-tool-surface-grounding.md  agent-tool-surface-plan.md  session-surface-redesign-plan.md  upstream-commit-review.md
docs/reference/: cli.md  configuration.md  instructions.md  tools.md
docs/temp/: oauth-library-refactor-plan.md
docs/tool-desc/: comparison.md  detailed-comparison.md  local-shell-mcp-tools.md
examples/: chatgpt-prompts.md  playwright-smoke.py
scripts/: check-release-matrix.py  ci-smoke.py  dev-http.sh  dev-mcp.sh  docker-entrypoint.sh  export-tools-json.py  generate-config-examples.py  probe-mcp.py  pyinstaller-entry.py  run-with-cloudflare-tunnel.sh  test-rest.sh
src/local_shell_mcp/: __init__.py  agent_bridge.py  agent_bridge_tools.py  agent_mcp.py  audit.py  auth.py  config_registry.py  conpty_ops.py  downloads.py  fs_ops.py  git_ops.py  http_app.py  jobs.py  main.py  mcp_app.py  models.py  oauth.py  playwright_ops.py  remote.py  remote_worker.py  responses.py  search_ops.py  server_instructions.py  settings.py  shell_environment.py  shell_ops.py  todo_ops.py  tools.py  version.py
tests/: conftest.py  e2e_helpers.py  e2e_scenarios.py  helpers.py  test_agent_bridge_config.py  test_agent_bridge_skills.py  test_agent_bridge_tools.py  test_agent_mcp.py  test_audit_tool_calls.py  test_bash_facade.py  test_cli.py  test_config_registry.py  test_config_surface.py  test_connector_errors.py  test_declarative_tools.py  test_downloads.py  test_e2e_http_rest.py  test_e2e_mcp_http.py  test_e2e_remote_worker.py  test_e2e_stdio.py  test_export_tools_json.py  test_files_ops.py  test_fs_ops.py  test_http_mcp_parity.py  test_http_validation.py  test_jobs.py  test_mcp_app.py  test_mcp_chatgpt_compat.py  test_public_docstrings.py  test_read_facade.py  test_remote.py  test_remote_facade.py  test_remote_list_machines.py  test_remote_transfer_tools.py  test_remote_worker_bootstrap.py  test_remote_worker_tool_specs.py  test_search_ops.py  test_secret_scan.py  test_serialization_utils.py  test_session_copy.py  (+8 more)
vscode-extension/: README.md  eslint.config.mjs  package-lock.json  package.json
vscode-extension/scripts/: package-vsix.cjs  package-vsix.mjs
vscode-extension/src/: extension.ts
(+242 files in other folders)
