[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[project]
name = "local-shell-mcp"
version = "3.0.1"
description = "A ChatGPT-compatible OAuth MCP server that gives AI coding agents controlled shell, filesystem, and git access inside a local container."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "local-shell-mcp contributors" }]
keywords = ["mcp", "chatgpt", "shell", "coding-agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mcp>=1.9.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "PyYAML>=6.0.1",
  "PyJWT>=2.8.0",
  "httpx>=0.27.0",
  "aiofiles>=23.2.1",
  "python-multipart>=0.0.9",
  "pathspec>=0.12.1",
]

[dependency-groups]
dev = [
  "pre-commit>=4.0.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/rijuyuezhu/local-shell-mcp"
Repository = "https://github.com/rijuyuezhu/local-shell-mcp"

[project.scripts]
local-shell-mcp = "local_shell_mcp.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
