[project]
name = "local-shell-mcp"
version = "3.2.1"
description = "A ChatGPT-compatible OAuth MCP server that gives AI coding agents controlled shell, filesystem, and git access inside a local container."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "local-shell-mcp contributors" }]
keywords = ["mcp", "chatgpt", "shell", "coding-agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiofiles>=25.1.0",
    "authlib>=1.7.2",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "mcp>=1.27.2",
    "pathspec>=1.1.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"


[project.urls]
Homepage = "https://github.com/rijuyuezhu/local-shell-mcp"
Repository = "https://github.com/rijuyuezhu/local-shell-mcp"

[project.scripts]
local-shell-mcp = "local_shell_mcp.main:main"

[tool.ruff]
line-length = 80
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
